--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"autoprefixer": "^9.4.10",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.5",
-		"browser-sync": "^2.26.3",
+		"browser-sync": "^2.26.7",
 		"browser-sync-webpack-plugin": "^2.2.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"core-js": "^3.0.1",
@@ -26,6 +26,7 @@
 		"eslint": "^6.8.0",
 		"file-loader": "^5.1.0",
 		"html-webpack-plugin": "^4.0.0-beta.5",
+		"http-proxy": "^1.18.1",
 		"json-loader": "^0.5.7",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.11.0",
